Working iframe snowflakes

--- a/custom_components/macs/www/styles/weather.css
+++ b/custom_components/macs/www/styles/weather.css
@@ -10,11 +10,13 @@
 
 :root{
 	--rainfall-intensity: 0;
+	--snowfall-intensity: 0;
 	--windspeed-intensity: 0;
 	--temperature-intensity: 0;
 }
 
 .fx-rain{ opacity: calc(0.9 * var(--rainfall-intensity)); }
+.fx-snow{ opacity: calc(0.9 * var(--snowfall-intensity)); }
 body.weather-rain{ --rainfall-intensity: var(--weather-intensity, 1); }
 body.weather-wind .fx-wind{ opacity: calc(0.9 * var(--weather-intensity)); }
 body.weather-hot  .fx-hot{  opacity: calc(0.9 * var(--weather-intensity)); }
@@ -36,6 +38,9 @@ body.weather-cold .fx-cold{ opacity: calc(0.9 * var(--weather-intensity)); }
 			rotate(var(--rain-tilt, 0deg));
 	}
 }
+
+/* Snow */
+.flake{ fill: #fff; filter: blur(1px); will-change: transform; }
 
 /* Wind */
 body.weather-wind .char{ animation: windSway 2.8s ease-in-out infinite; }
