--- a/custom_components/macs/www/styles/base.css
+++ b/custom_components/macs/www/styles/base.css
@@ -147,4 +147,9 @@ body{
     font-size: 10px;
     color: #aaa;
     display:none;
+	user-select: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    z-index:1000;
 }
