--- a/custom_components/macs/www/ha/editor.css
+++ b/custom_components/macs/www/ha/editor.css
@@ -19,9 +19,29 @@ label {
 }
 
 .hint {
+    display: none;
     opacity: 0.7;
     font-size: 90%;
     margin-top: 4px;
+}
+
+.hint.always {
+    display: block;
+}
+
+.hint.open {
+    display: block;
+    opacity: 1;
+}
+
+.tooltip {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    cursor: help;
+    opacity: 1;
+    float: right;
+    color: var(--secondary-text-color);
 }
 
 .fullwidth {
