--- a/custom_components/macs/www/backend/cards.css
+++ b/custom_components/macs/www/backend/cards.css
@@ -7,6 +7,7 @@ ha-card {
     height: 100%;
     overflow: hidden;
     border-radius: var(--ha-card-border-radius, 12px);
+    background-color: #000000;
 }
 
 .wrap {
@@ -14,17 +15,21 @@ ha-card {
     width: 100%;
 }
 
-iframe,
-img {
+iframe{
     border: 0;
     width: 100%;
     height: 100%;
-    display: block;
+    display: block; 
 }
-
 img {
+    border: 0;
+    /*width: 100%;
+    height: 100%;*/
+    display: block;
+    margin:auto;
     object-fit: cover;
 }
+
 
 .hidden {
     display: none !important;
