--- a/custom_components/macs/www/backend/editor.css
+++ b/custom_components/macs/www/backend/editor.css
@@ -84,10 +84,12 @@ label {
 
 .about-toggle {
     cursor: pointer;
-    opacity: 0.6;
+}
+
+.about-toggle:hover{
+    text-decoration: underline;
 }
 
 .about-content {
     padding-left: 10px;
-    opacity: 0.9;
 }
